--- a/package.json
+++ b/package.json
@@ -1,34 +1,20 @@
 {
-  "name": "restewoks",
-  "version": "0.1.0",
+  "name": "retros",
   "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "core-js": "^2.6.5",
-    "firebase": "^6.1.0",
-    "firebase-tools": "^6.10.0",
-    "ramda": "^0.26.1",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
-    "vuetify": "^1.5.5",
-    "vuex": "^3.0.1"
+  "workspaces": [
+    "packages/*"
+  ],
+  "engines": {
+    "node": ">=10.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.0.5"
+    "yarn": "^1.17.3",
+    "lerna": "^3.16.4"
+  },
+  "scripts": {
+    "start": "yarn @retros/app serve",
+    "@retros/app": "yarn workspace @retros/app",
+    "lint": "lerna run lint",
+    "bootstrap": "lerna bootstrap"
   }
 }
