feat(firebase): refactor firebase implementation * move firebase logic to seperate package * create firebase-adapter * generalize auth and actions logic

--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,8 @@
         "ignored-file",
         "*.md"
       ],
-      "message": "chore(release): publish"
+      "message": "chore(release): publish",
+      "conventionalCommits": true
     }
   }
 }
