--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@retros/app",
   "version": "0.1.0",
+  "private": true,
   "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,13 +10,13 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "firebase": "^6.1.0",
     "firebase-tools": "^6.10.0",
     "ramda": "^0.26.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "@retros/firebase-adapter": "0.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
