--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,14 +9,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@retros/firebase-adapter": "0.0.1",
     "core-js": "^2.6.5",
     "firebase-tools": "^6.10.0",
     "ramda": "^0.26.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5",
-    "vuex": "^3.0.1",
-    "@retros/firebase-adapter": "0.0.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
