--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,6 +12,7 @@
     "@retros/firebase-adapter": "0.0.1",
     "core-js": "^2.6.5",
     "firebase-tools": "^6.10.0",
+    "moment": "^2.24.0",
     "ramda": "^0.26.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
