--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.1",
     "@retros/firebase-adapter": "0.0.1",
     "core-js": "^2.6.5",
     "firebase-tools": "^6.10.0",
